@@ -1,4 +1,4 @@
-#Mon Dec 20 08:19:20 CET 2010
+#Mon Jun 27 08:25:42 CEST 2011
 eclipse.preferences.version=1
 encoding//.processed/src/org/jvoicexml/jsapi2/AudioFormat.java=Cp1252
 encoding//.processed/src/org/jvoicexml/jsapi2/BaseAudioManager.java=Cp1252
@@ -19,10 +19,10 @@ encoding//.processed/src/org/jvoicexml/jsapi2/synthesis/BaseSynthesizer.java=Cp1
 encoding//.processed/src/org/jvoicexml/jsapi2/synthesis/BaseSynthesizerProperties.java=Cp1252
 encoding//.processed/src/org/jvoicexml/jsapi2/synthesis/QueueItem.java=Cp1252
 encoding//.processed/src/org/jvoicexml/jsapi2/synthesis/QueueManager.java=Cp1252
-encoding//.processed/unittests/org/jvoicexml/jsapi2/DummyAudioManager.java=Cp1252
-encoding//.processed/unittests/org/jvoicexml/jsapi2/DummySpeechEventExecutor.java=Cp1252
-encoding//.processed/unittests/org/jvoicexml/jsapi2/states/StateTransitionTest.java=Cp1252
 encoding//.processed/unittests/org/jvoicexml/jsapi2/synthesis/BaseSynthesizerPropertiesTest.java=Cp1252
 encoding//.processed/unittests/org/jvoicexml/jsapi2/synthesis/QueueManagerTest.java=Cp1252
+encoding//.processed/unittests/org/jvoicexml/jsapi2/synthesis/SynthesizerStateTransitionTest.java=Cp1252
+encoding//.processed/unittests/org/jvoicexml/jsapi2/test/DummyAudioManager.java=Cp1252
+encoding//.processed/unittests/org/jvoicexml/jsapi2/test/DummySpeechEventExecutor.java=Cp1252
 encoding//.processed/unittests/org/jvoicexml/jsapi2/test/synthesis/DummySpeakableListener.java=Cp1252
 encoding//.processed/unittests/org/jvoicexml/jsapi2/test/synthesis/DummySynthesizer.java=Cp1252
